added some links and icons

--- a/src/components/dashboard/company-profile/company-profile.module.scss
+++ b/src/components/dashboard/company-profile/company-profile.module.scss
@@ -1,15 +1,13 @@
 .companyProfile {
   background-color: #ffffff;
-  padding: 20px;
-  border-radius: 8px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  padding: 2em;
 }
 
 .details {
-  margin-top: 20px;
+  margin-top: 2em;
 }
 
 .p {
-  font-size: 20px;
+  font-size: 1em;
   color: aqua;
 }
