--- a/src/components/dashboard/financials/financials.module.scss
+++ b/src/components/dashboard/financials/financials.module.scss
@@ -1,8 +1,9 @@
 .financials {
   background-color: #ffffff;
-  padding: 20px;
-  border-radius: 8px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+  background-color: #FFFDFB;
+  border: 1px solid #E1E1E1;
+  padding: 1em;
 }
 
 
