--- a/src/components/dashboard/sidebar/sidebar.module.scss
+++ b/src/components/dashboard/sidebar/sidebar.module.scss
@@ -1,5 +1,10 @@
 .sidebar {
-  width: 22em;
+  position: sticky;
+  align-self: flex-start;
+  top: 0;
+  left: 0;
+  max-width: 20em;
+  height: 95vh;
   background: linear-gradient(180deg, #FFF6EE 0%, #EDECFF 100%);
   display: flex;
   flex-direction: column;
@@ -38,7 +43,7 @@
     margin-left: 1em;
     margin-right: 1em;
     margin-top: 3em;
-    margin-bottom: 15em;
+    margin-bottom: 12em;
 
 
     ul {
