--- a/src/pages/dashboard/dashboard.module.scss
+++ b/src/pages/dashboard/dashboard.module.scss
@@ -45,7 +45,7 @@ in the space between the divs
 .mainContent {
   height: 100%;
   flex: 1 1 59%;
-  overflow-y: auto;
+/*   overflow-y: auto; */
   margin-left: 3.5em;
   margin-right: 3.5em;
 
