--- a/src/styles/theme.module.scss
+++ b/src/styles/theme.module.scss
@@ -32,6 +32,8 @@ $our-border-radius: 0.5em;
 $z-index-dropdown: 100;
 $z-index-modal: 200;
 
+///////////////////////////////////////////////////// dashboards //////////////////////////////////
+$component-bottom-margin: 2em;
 /////////////////////////////////////////////////////// responsiveness //////////////////////////////////
 //Ranges -> it means the max width for each design
 $phone-width: 550px;
@@ -54,6 +56,7 @@ $desktop-width: 1440px;
   color: $our-orange;
   font-weight: 800;
   display: inline-block;
+  cursor: pointer;
 }
 
 .orangeLink:hover {
