added most routes

--- a/src/components/dashboard/header/header.module.scss
+++ b/src/components/dashboard/header/header.module.scss
@@ -33,6 +33,7 @@
   &.active {
     background-color: #FFF6EE; /* Example color for the active state */
     border: 1px solid #FF8516;
+    color: #FF8516;
   }
 
   .icon {
