--- a/src/components/dashboard/sidebar/sidebar.module.scss
+++ b/src/components/dashboard/sidebar/sidebar.module.scss
@@ -11,7 +11,6 @@
   justify-content: space-between;
   padding: 1.25em;
 
-  
   .workspace {
     display: flex;
     align-items: center;
@@ -45,7 +44,6 @@
     margin-top: 3em;
     margin-bottom: 12em;
 
-
     ul {
       list-style: none;
       padding: 0;
@@ -56,12 +54,14 @@
       align-items: center;
       padding: 0.625em 0;
       margin-bottom: 0.5em;
+      color: grey;  /* default text color */
+      text-decoration: none;  /* remove underline from links */
 
       .icon {
         width: 1.5em;
         height: 1.5em;
         margin-right: 1em;
-        background-color: #ddd;
+        background-color: grey;  /* default icon color */
         border-radius: 50%;
 
         &.iconGetStarted {
@@ -78,10 +78,6 @@
         }
       }
 
-      .active {
-        color: orange;
-      }
-
       .notification {
         background-color: red;
         color: white;
@@ -89,6 +85,14 @@
         padding: 0.125em 0.375em;
         font-size: 0.75em;
         margin-left: 0.5em;
+      }
+
+      &.active {
+        color: orange;  /* active text color */
+
+        .icon {
+          filter: invert(34%) sepia(91%) saturate(1558%) hue-rotate(356deg) brightness(105%) contrast(101%);
+        }
       }
     }
   }
@@ -120,19 +124,12 @@
       }
     }
 
-    
-
     p {
       font-size: 0.875em;
       margin: 0.5em 0;
     }
 
     button {
-      /* background-color: orange;
-      color: white;
-      border: none;
-      padding: 0.5em 1em;
-      border-radius: 0.25em; */
       cursor: pointer;
     }
   }
