--- a/src/components/dashboard/tracker/tracker.module.scss
+++ b/src/components/dashboard/tracker/tracker.module.scss
@@ -5,7 +5,7 @@
   flex-direction: column;
   padding: 2.5em;
   border-radius: 10px;
-  background-color: #fffdfb;
+  background-color: white;
   border: 1px solid #e1e1e1;
   padding: 1.5em;
 }
