--- a/src/pages/dashboard/dashboard.module.scss
+++ b/src/pages/dashboard/dashboard.module.scss
@@ -74,5 +74,17 @@ in the space between the divs
     flex-direction: row;
     column-gap: 1.5em;
   }
+
+  .flexContainer {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    column-gap: 2em;
+
+    .item {
+      width: 100%;
+    }
+  }
 }
 
