added sekofia image

--- a/src/components/dashboard/sidebar/sidebar.module.scss
+++ b/src/components/dashboard/sidebar/sidebar.module.scss
@@ -33,7 +33,7 @@
       width: 2em;
       height: 2em;
       margin-right: 0.625em;
-      background-color: #ddd;
+      background: url('/icons/sekofia.svg') no-repeat center center;
       border-radius: 50%;
     }
   }
