--- a/src/components/dashboard/tracker/tracker.module.scss
+++ b/src/components/dashboard/tracker/tracker.module.scss
@@ -14,13 +14,18 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  text-align: center;
   margin-bottom: 1em;
+
+  
+
+  span {
+    color: #a0a0a0;
+    font-size: 0.875em;
+  }
 }
 
-.thisWeek {
-  color: #a0a0a0;
-  font-size: 0.875em;
-}
+
 
 .content {
   display: flex;
