--- a/src/components/dashboard/company-info/company-info.module.scss
+++ b/src/components/dashboard/company-info/company-info.module.scss
@@ -1,7 +1,7 @@
 .root {
   background-color: #ffffff;
   border: 1px solid #E1E1E1;
-  font-family: Arial, sans-serif;
+  font-family: Helvetica, sans-serif;
   font-weight: 300;
   color: #4A555C;
   padding-bottom: 10em;
