--- a/src/components/dashboard/sidebar/sidebar.module.scss
+++ b/src/components/dashboard/sidebar/sidebar.module.scss
@@ -3,7 +3,8 @@
   align-self: flex-start;
   top: 0;
   left: 0;
-  max-width: 18em;
+  min-width: 17em;
+  max-width: 17em;
   height: 100vh;
   background: linear-gradient(180deg, #FFF6EE 0%, #EDECFF 100%);
   display: flex;
