--- a/src/styles/theme.module.scss
+++ b/src/styles/theme.module.scss
@@ -25,8 +25,9 @@ $button-font: 400 1rem/1.3 $my-prettyfont;
 /////////////////////////////////////////////////////// box shadow //////////////////////////////////
 $box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 
-/////////////////////////////////////////////////////// border radius //////////////////////////////////
-$our-border-radius: 0.5em;
+/////////////////////////////////////////////////////// borders //////////////////////////////////
+$border-radius: 0.5em;
+$border: 1px solid #E1E1E1;
 
 /////////////////////////////////////////////////////// z-index //////////////////////////////////
 $z-index-dropdown: 100;
