--- a/src/components/home-page/company-info-banner/company-info.module.scss
+++ b/src/components/home-page/company-info-banner/company-info.module.scss
@@ -1,6 +1,6 @@
 .root {
   background-color: #ffffff;
-  border: 1px solid #E1E1E1;
+  border-left: 1px solid #E1E1E1;
   font-family: Helvetica, sans-serif;
   font-weight: 300;
   color: #4A555C;
